unpackaged/main/default/objects/Lead/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>Город</label>
    <length>50</length>
    <type>Text</type>
</CustomField>