unpackaged/main/default/objects/Lead/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Страна</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Россия</fullName>
            </value>
            <value>
                <fullName>Беларусь</fullName>
            </value>
            <value>
                <fullName>Казахстан</fullName>
            </value>
            <value>
                <fullName>Украина</fullName>
            </value>
            <value>
                <fullName>Словакия</fullName>
            </value>
            <value>
                <fullName>Литва</fullName>
            </value>
            <value>
                <fullName>Монголия</fullName>
            </value>
            <value>
                <fullName>Австрия</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>