unpackaged/main/default/objects/Lead/fields/LeadCompanyType__c.field-meta.xml
<CustomField>
    <fullName>LeadCompanyType__c</fullName>
    <label>Тип компании</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Монтажник</fullName>
            </value>
            <value>
                <fullName>Проектировщик</fullName>
            </value>
            <value>
                <fullName>Проектно-монтажная организация</fullName>
            </value>
            <value>
                <fullName>ЛПУ</fullName>
            </value>
            <value>
                <fullName>Служба эксплуатации</fullName>
            </value>
            <value>
                <fullName>Заказчик</fullName>
            </value>
            <value>
                <fullName>Инвестор</fullName>
            </value>
            <value>
                <fullName>Поставщик</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>