unpackaged/main/default/objects/Lead/fields/LeadMessage__c.field-meta.xml
<CustomField>
    <fullName>LeadMessage__c</fullName>
    <label>Сообщение интереса</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>