unpackaged/main/default/objects/Lead/fields/PostIndex__c.field-meta.xml
<CustomField>
    <fullName>PostIndex__c</fullName>
    <label>Почтовый индекс</label>
    <length>20</length>
    <type>Text</type>
</CustomField>