unpackaged/main/default/objects/Lead/fields/UserTION__c.field-meta.xml
<CustomField>
    <fullName>UserTION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Сотрудник ответственный за Интерес</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Интересы</relationshipLabel>
    <relationshipName>mDVj</relationshipName>
    <type>Lookup</type>
</CustomField>